Sat Mar  2 06:30:14 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* config/sparc/sparc.c (sparc_initialize_trampoline): Use
	trunc_int_for_mode.

	* emit-rtl.c (offset_address): Call update_temp_slot_address.

2002-03-01  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Makefile.in (CRTSTUFF_CFLAGS): Add -fno-zero-initialized-in-bss.
	* doc/invoke.texi (-fno-zero-initialized-in-bss): Document.
	* flags.h (flag_zero_initialized_in_bss): Declare.
	* toplev.c (flag_zero_initialized_in_bss): New flag.
	(lang_independent_options): Add flag_zero_initialized_in_bss.
	* tree.c (initializer_zerop): New function.
	* tree.h (initializer_zerop): Declare.
	* varasm.c (assemble_variable): If we can emit bss, put zero
	initializers in the bss section.

2002-03-02  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.h (ASM_WEAKEN_DECL): AIX assembler doesn't
	like more than one symbol per .weak directive.

2002-03-01  Richard Henderson  <rth@redhat.com>

	* config/ia64/ia64.c (ia64_initial_elimination_offset): Do not
	adjust argument_pointer by pretend_args_size.
	(ia64_va_start): Adjust va_start address by -pretend_args_size.

2002-03-01  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.c (h8300_adjust_insn_length): Clean up.

Fri Mar  1 20:59:14 CET 2002  Jan Hubicka  <jh@suse.cz>

	* toplev.c (rest_of_compilation): Delete dead jumptables before
	loop.
	* flow.c (delete_dead_jumptables): Make global.
	* rtl.h (delete_dead_jumptables): Declare.

2002-03-01  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.h (HANDLE_PRAGMA_PACK): Delete.
	* config/rs6000/darwin.h (HANDLE_SYSV_PRAGMA): Define.
	* config/rs6000/xcoff.h (COLLET_EXPORT_LIST): Delete.

2002-03-01  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300-protos.h: Fix formatting.
	* config/h8300/h8300.c: Likewise.
	* config/h8300/h8300.h: Likewise.

2002-03-01  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.c (print_operand): Support 16-bit
	constant addresses.