@@ -1769,7 +1769,8 @@
    (clobber (match_scratch:QI 4 "=X,&r"))]
   ""
   "* return output_a_shift (operands);"
-  [(set_attr "length" "20")
+  [(set (attr "length")
+	(symbol_ref "compute_a_shift_length (insn, operands)"))
    (set_attr "cc" "clobber")])
 
 ;; HI BIT SHIFTS
@@ -1803,7 +1804,8 @@
    (clobber (match_scratch:QI 4 "=X,&r"))]
   ""
   "* return output_a_shift (operands);"
-  [(set_attr "length" "20")
+  [(set (attr "length")
+	(symbol_ref "compute_a_shift_length (insn, operands)"))
    (set_attr "cc" "clobber")])
 
 ;;  SI BIT SHIFTS
@@ -1837,7 +1839,8 @@
    (clobber (match_scratch:QI 4 "=X,&r"))]
   ""
   "* return output_a_shift (operands);"
-  [(set_attr "length" "20")
+  [(set (attr "length")
+	(symbol_ref "compute_a_shift_length (insn, operands)"))
    (set_attr "cc" "clobber")])
 
 ;; ----------------------------------------------------------------------
